# next-quest

./: .gitignore  CLAUDE.md  Cargo.toml  DATA_MODEL.md  README.md  VISION.md  package.json
docs/: 5d2-11-layout-proposals.html  5d2-11-quest-list-layout-design.md  campaign-mockup-future.html  cli-design.md  cli-guide.md  cli-requirements.md  cli-step1-crate-restructure.md  cli-step2-scaffold-list.md  cli-step3-add-quest.md  cli-step4-5-saga-step-batch.md  cta-window-mockup.html  filter-bar-mockup.html  image-generation-workflow.md  lane-refactor-design.md  lane-refactor-requirements.md  mechanics.md  menu-bar-mockup.html  phase-5d-group1-design.md  phase-5d-group1-requirements.md  phase0-design.md  phase0-requirements.md  phase05-design.md  phase1-groupB-design.md  phase1-requirements.md  phase15-design.md  phase2a-design.md  phase2b-mockup.html  phase2c-requirements.md  phase2d-requirements.md  phase2f-requirements.md  phase2g-requirements.md  phase2g1-design.md  phase2g2-design.md  phase2h1-design.md  phase2h1-requirements.md  phase5a-saga-list-design.md  phase5a-saga-visibility-requirements.md  quest-list-mockup.html  release-pipeline-design.md  release-pipeline-requirements.md  (+4 more)
nq-core/: Cargo.toml
nq-core/src/: db.rs  (+1 more)
relscripts/: build.sh  checksums.sh  install.sh  package.sh  release-all.sh  release-notes.sh  release.sh  version.sh
src-cli/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  tray.rs
ui/: index.html  overlay.html
(+37 files in other folders)
