[package]
name = "next-quest"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
libc = "0.2.183"

[build-dependencies]
tauri-build = { version = "2", features = [] }
