[package]
name = "next-quest"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nq-core = { path = "../nq-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
